added youtube video link

--- a/Lab 4/Programming_the_red_led.html
+++ b/Lab 4/Programming_the_red_led.html
@@ -1,4 +1,7 @@
 <p><strong>Lab 4: Programming the RGB Module with PWM</strong></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MXgM3jNqEZc?si=ej-72XEjpPZ5XPFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
 <p>
   Welcome to Lab 4! In this lab, we&rsquo;ll explore how to use Pulse Width
   Modulation (PWM) to control the brightness of an LED on the RGB module
