final Lab8 assignment

--- a/Lab 8/workingwithTheDS18B20.html
+++ b/Lab 8/workingwithTheDS18B20.html
@@ -146,6 +146,7 @@
   DS18B20 sensor using the <code>w1thermsensor</code> library.
 </p>
 <h3>Code Breakdown</h3>
+<p>Lab8/demo_code/read_temperature.py</p>
 <div style="background-color: #2e3440; padding: 10px; border-radius: 5px">
   <pre
     style="
@@ -208,18 +209,16 @@
   can run the Python code to read temperature data from the DS18B20 sensor
   directly in Visual Studio Code (VS Code).
 </p>
-<h2>Conclusion</h2>
-<p>
-  By using the <code>w1thermsensor</code> library, interacting with the DS18B20
-  temperature sensor becomes much easier, as it abstracts the complexities of
-  the 1-Wire protocol. This page has covered the steps to install the library,
-  explained the Python code to read temperature data, and reviewed the DS18B20
-  sensor and its wiring schematic.
-</p>
-<p>
-  Feel free to test the code on your Raspberry Pi and ensure the sensor is
-  connected properly!
-</p>
+<h2>
+  <img
+    src="https://weber.instructure.com/courses/591482/files/115154623/preview"
+    alt="code running.PNG"
+    width="1151"
+    height="671"
+    data-api-endpoint="https://weber.instructure.com/api/v1/courses/591482/files/115154623"
+    data-api-returntype="File"
+  />
+</h2>
 <hr />
 <h3>Assignment Submission:</h3>
 <ul>
